--- a/yaml/config.yml
+++ b/yaml/config.yml
@@ -4,7 +4,7 @@ general_settings:
   ## OPTIONAL. Defaults to true if deleted. If true is selected then the command "occ preview:generate-all" will be used. If set to false, then "occ preview:pre-generate" will be used
   generate_all: <true or false>
 
-## DELETE THE ONE YOU DON'T NEED. This is the schedule when you want the script to run and make backup / update
+## DELETE THE ONE YOU DON'T NEED. This is the schedule when you want the script to run and call the Preview Generator commands
 backup_schedule:
   ## DELETE IF NOT NEEDED
   weekly:
@@ -16,7 +16,7 @@ backup_schedule:
   daily:
     ## Use HH:mm format and wrap the time in quatation marks e.g. "14:28"
     time: <HH:mm>
-  ## DELETE IF NOT NEEDED. This schedule will run the backup/update procedure, on the specified day on the last week of the current month
+  ## DELETE IF NOT NEEDED. This schedule will run the preview generation command, on the specified day on the last week of the current month
   last_day_of_month:
     ## available values are MON, TUE, WED, THU, FRI, SAT, SUN.
     day: <INPUT DAY HERE>
